postgres/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: postgres-$ENVIRONMENT
spec:
  selector:
    app: postgres-deployment
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
