postgres/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: postgres-${ENVIRONMENT}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: tcp
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - postgres-${ENVIRONMENT}.${BASE_DOMAIN}
    secretName: postgres-tls
  rules:
  - host: postgres-${ENVIRONMENT}.${BASE_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres-service
            port:
              number: 5432
